# Game-Engine

./: .gitignore  CMakeLists.txt  README.md  S23_Game.sln  Uniqueness.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
S23_Game/: CMakeLists.txt  S23_Game.vcxproj  main.cpp
Sky/: CMakeLists.txt  Sky.vcxproj  Sky.vcxproj.filters
Sky/Src/: GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  SkyApp.cpp  SkyApp.h  SkyEvents.cpp  SkyEvents.h  SkyKeys.h  SkyUtility.h  Unit.cpp  Unit.h  WindowImplementation.cpp  WindowImplementation.h  pch.h
Sky/Src/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h
Sky/Src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Sky/include/: Sky.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: CMakeLists.txt  stbi.vcxproj  stbi.vcxproj.filters
